- Add minimum width to analytics heatmap to display better on mobile - Fix tooltip rendering

--- a/src/components/pages/analytics/analytics.css
+++ b/src/components/pages/analytics/analytics.css
@@ -24,3 +24,7 @@
 .react-calendar-heatmap-weekday-labels {
     transform: translate(6px, 14px);
 }
+
+.react-calendar-heatmap {
+    min-width: 800px;
+}
